# Applied-active-inference

./: .gitignore  README.md  download_datasets.py  grocery_inventory_ai.ipynb  pyproject.toml  supply_chain_pomdp.ipynb
checkpoints/: supply_chain_mlp.pt
src/applied_active_inference/: __init__.py  data_loader.py  distribution_fitting.py  grocery.py  main.py  reorder_engine.py  simulation.py  supplier_reliability.py  supply_chain_dataset.py  train.py
