[project]
name = "applied-active-inference"
version = "0.1.0"
description = "Applied Active Inference experiments"
requires-python = ">=3.11"
authors = [
    { name = "Mahault Albarracin", email = "Mahault.Albarracin@gmail.com" },
    { name = "Jasmine Moore", email = "jasmine@jamoo.dev" }
]
dependencies = [
    "ipykernel>=6.31.0",
    "kagglehub>=0.3.13",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "scipy-stubs~=1.17.1",
]
classifiers = [
    "Private :: DO NOT UPLOAD"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/applied_active_inference/__init__.py"

[project.scripts]
inventory-test = "applied_active_inference.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/applied_active_inference"]
